[metadata]
name = gohassistant
description = Home assistant for gohcloud (https://github.com/nathgoh/gohcloud)
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
author = Nathaniel Goh
url = https://github.com/nathgoh/gohassistant

[options]
packages = find:
python_requires = >=3.10
install_requires =
    openai-whisper
    numpy == 2.0.2
    torch==2.4.1 
    torchvision==0.19.1 
    torchaudio==2.4.1    
    fastapi[standard]
[options.package_data]
* = README.md